--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
         <slf4j.version>2.0.16</slf4j.version>
         <hibernate-version>6.5.2.Final</hibernate-version>
         <postgresql.version>42.7.3</postgresql.version>
+        <junit.version>5.9.1</junit.version>
+        <hamcrest.version>2.0.0.0</hamcrest.version>
+        <testcontainers.version>1.18.0</testcontainers.version>
+        <hikari.version>5.1.0</hikari.version>
+
     </properties>
 
     <dependencies>
@@ -34,6 +39,61 @@
             <artifactId>hibernate-core</artifactId>
             <version>${hibernate-version}</version>
         </dependency>
+
+
+        <!--  TEST    -->
+
+        <!--        TESTING       -->
+        <!--        https://www.baeldung.com/junit-5-->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <!--        https://www.baeldung.com/hamcrest-core-matchers-->
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>java-hamcrest</artifactId>
+            <version>${hamcrest.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <!--        https://java.testcontainers.org/quickstart/junit_5_quickstart/-->
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
+            <version>${testcontainers.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${testcontainers.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>jdbc</artifactId>
+            <version>${testcontainers.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>${testcontainers.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>${hikari.version}</version>
+        </dependency>
+
 
         <!--  WEB SERVICE   -->
         <dependency>
@@ -77,5 +137,8 @@
             <version>${slf4j.version}</version>
         </dependency>
     </dependencies>
+
+
+
 
 </project>
